# openCVAngleTracking

./: CMakeLists.txt  angleTracking.cpp
